Fixed layout problems by removing old css themes fixed problem wich lead to double-loading of entries when clicking on a chart

--- a/bpt-resource-management-vaadin/WebContent/VAADIN/themes/bpt/styles.css
+++ b/bpt-resource-management-vaadin/WebContent/VAADIN/themes/bpt/styles.css
@@ -243,17 +243,3 @@ iframe{
 	overflow: hidden;
 }
 
-input.v-textfield{
-	background-image: none !important;
-	background: none !important;
-}
-
-input.v-filterselect-input{
-	background-image: none !important;
-	background: none !important;
-}
-
-div.v-filterselect{
-	background-image: none !important;
-	background: none !important;	
-}
